notejamdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notejam-app
  template:
    metadata:
      labels:
        app: notejam-app
    spec:
      containers:
        - name: notejam-app
          image: janhvimaddeshiya/notejam-3img
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: notejam-app
spec:
  type: NodePort
  ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
  selector:
    app: notejam-app
