pgdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    name: postgres
    app: notejam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
      app: notejam-app
  template:
    metadata:
      name: postgres
      labels:
        name: postgres
        app: notejam-app
    spec:
      nodeName: minikube
      containers:
      - name: postgres
        image: postgres:9.6
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-volume-mount
            mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
  labels:
    name: postgres-service
    app: notejam-app
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres
    app: notejam-app
