ing-notejam.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/upstream-vhost: notejam-jan.info
          #konghq.com/strip-path: 'true'
spec:
        #ingressClassName: kong
  rules:
    - host: notejam-jan.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-app
                port:
                    number: 80
